@@ -4,11 +4,12 @@ import ch.uzh.ifi.access.course.model.Exercise;
 import ch.uzh.ifi.access.course.model.ExerciseType;
 import ch.uzh.ifi.access.student.model.MultipleChoiceSubmission;
 import ch.uzh.ifi.access.student.model.SubmissionEvaluation;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 
 public class MultipleChoiceEvaluatorTest {
 
@@ -29,7 +30,7 @@ public class MultipleChoiceEvaluatorTest {
         MultipleChoiceEvaluator evaluator = new MultipleChoiceEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertEquals(2.0, grade.getScore(), 0.25);
+        Assertions.assertEquals(2.0, grade.getScore(), 0.25);
     }
 
     @Test
@@ -42,14 +43,14 @@ public class MultipleChoiceEvaluatorTest {
                 .type(ExerciseType.multipleChoice).build();
 
         MultipleChoiceSubmission sub = MultipleChoiceSubmission.builder()
-                .choices(new HashSet<>(Arrays.asList(1)))
+                .choices(new HashSet<>(List.of(1)))
                 .exerciseId(ex.getId())
                 .build();
 
         MultipleChoiceEvaluator evaluator = new MultipleChoiceEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertEquals(1.0, grade.getScore(), 0.25);
+        Assertions.assertEquals(1.0, grade.getScore(), 0.25);
     }
 
     @Test
@@ -69,7 +70,7 @@ public class MultipleChoiceEvaluatorTest {
         MultipleChoiceEvaluator evaluator = new MultipleChoiceEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertEquals(0.0, grade.getScore(), 0.25);
+        Assertions.assertEquals(0.0, grade.getScore(), 0.25);
     }
 
     @Test
@@ -79,7 +80,7 @@ public class MultipleChoiceEvaluatorTest {
                 .options(Arrays.asList("Hans", "Peter", "Frieda", "Gretel"))
                 .solutions(Arrays.asList("Hans", "Peter"))
                 .maxScore(2)
-                .hints(Arrays.asList("Hinweis"))
+                .hints(List.of("Hinweis"))
                 .type(ExerciseType.multipleChoice).build();
 
         MultipleChoiceSubmission sub = MultipleChoiceSubmission.builder()
@@ -90,8 +91,8 @@ public class MultipleChoiceEvaluatorTest {
         MultipleChoiceEvaluator evaluator = new MultipleChoiceEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertNotNull("Has hints.", grade.getHints());
-        Assert.assertTrue("Contains cartain hint.", grade.getHints().contains("Hinweis"));
+        Assertions.assertNotNull(grade.getHints());
+        Assertions.assertTrue(grade.getHints().contains("Hinweis"));
     }
 
     @Test
@@ -111,7 +112,7 @@ public class MultipleChoiceEvaluatorTest {
         MultipleChoiceEvaluator evaluator = new MultipleChoiceEvaluator();
         SubmissionEvaluation grade = evaluator.evaluate(sub, ex);
 
-        Assert.assertEquals(1.0, grade.getScore(), 0.25);
+        Assertions.assertEquals(1.0, grade.getScore(), 0.25);
     }
 
 }
